5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4173/executions/1834_2603.log
== SUBMITION (2019-07-06 16:08:29) 
-- CODE:
rom numpy import *
from numpy.linalg import *
a = array(eval(input())
for ir in range(shape(a)[1])
	a[ :,i]= sorted(a[ :,i],reverse=True)
print(a)
-- EXECUTION TIME:
0.80098
-- ERROR:
  File "/home/codebench/codes/1834/2603/main.py", line 1
    rom numpy import *
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-06 16:08:46) 
-- CODE:
rom numpy import *
from numpy.linalg import *
a = array(eval(input()))
for ir in range(shape(a)[1])
	a[ :,i]= sorted(a[ :,i],reverse=True)
print(a)
-- EXECUTION TIME:
0.918264
-- ERROR:
  File "/home/codebench/codes/1834/2603/main.py", line 1
    rom numpy import *
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-06 16:09:08) 
-- CODE:
rom numpy import *
from numpy.linalg import *
a = array(eval(input()))
for ir in range(shape(a)[1]):
	a[ :,i]= sorted(a[ :,i],reverse=True)
print(a)
-- EXECUTION TIME:
0.697597
-- ERROR:
  File "/home/codebench/codes/1834/2603/main.py", line 1
    rom numpy import *
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-06 16:10:15) 
-- CODE:
rom numpy import *
from numpy.linalg import *
a = array(eval(input()))
for ir in range(shape(a)[1]):
	a[ :, i]=sorted(a[ : ,i],reverse=True)
print(a)
-- EXECUTION TIME:
0.854663
-- ERROR:
  File "/home/codebench/codes/1834/2603/main.py", line 1
    rom numpy import *
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-06 16:10:21) 
-- CODE:
rom numpy import *
from numpy.linalg import *
a = array(eval(input()))
for ir in range(shape(a)[1]):
	a[ :, i]=sorted(a[ :, i],reverse=True)
print(a)
-- EXECUTION TIME:
0.858001
-- ERROR:
  File "/home/codebench/codes/1834/2603/main.py", line 1
    rom numpy import *
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-06 16:10:22) 
-- CODE:
rom numpy import *
from numpy.linalg import *
a = array(eval(input()))
for ir in range(shape(a)[1]):
	a[ :, i]=sorted(a[ :, i],reverse=True)
print(a)
-- ERROR:
File "XXXX", line 1
    rom numpy import *
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-06 16:10:30) 
-- CODE:
from numpy import *
from numpy.linalg import *
a = array(eval(input()))
for ir in range(shape(a)[1]):
	a[ :, i]=sorted(a[ :, i],reverse=True)
print(a)
-- EXECUTION TIME:
1.14086
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1834/2603/main.py", line 5, in <module>
    a[ :, i]=sorted(a[ :, i],reverse=True)
NameError: name 'i' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-06 16:10:34) 
-- CODE:
from numpy import *
from numpy.linalg import *
a = array(eval(input()))
for ir in range(shape(a)[1]):
	a[ :, i]=sorted(a[ :, i],reverse=True)
print(a)
-- EXECUTION TIME:
1.19381
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1834/2603/main.py", line 5, in <module>
    a[ :, i]=sorted(a[ :, i],reverse=True)
NameError: name 'i' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-06 16:10:34) 
-- CODE:
from numpy import *
from numpy.linalg import *
a = array(eval(input()))
for ir in range(shape(a)[1]):
	a[ :, i]=sorted(a[ :, i],reverse=True)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-06 16:11:08) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
for ir in range(shape(a)[1]):
	a[ :, i]=sorted(a[ :, i],reverse=True)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-06 16:11:20) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
for ir in range(shape(a)[1]):
	a[ :, i]=sorted(a[ :, i],reverse=True)
print(a)
-- EXECUTION TIME:
0.948805
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1834/2603/main.py", line 5, in <module>
    a[ :, i]=sorted(a[ :, i],reverse=True)
NameError: name 'i' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-06 16:11:21) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
for ir in range(shape(a)[1]):
	a[ :, i]=sorted(a[ :, i],reverse=True)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-06 16:14:50) 
-- CODE:

from numpy.linalg import*
a = array(eval(input()))
for ir in range(shape(a)[1]):
	a[ :,i]=sorted(a[ :,i],reverse=True)
print(a)
-- EXECUTION TIME:
1.2445
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1834/2603/main.py", line 3, in <module>
    a = array(eval(input()))
NameError: name 'array' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 14:36:22) 
-- CODE:
from numpy import*
from numpy.linalg import*

x=array(eval(input()))



for i in range(x.shape[0]):
	x[:,i]=sorted(x[:,i],reverse=True)
print(x)
-- EXECUTION TIME:
1.16866
-- TEST CASE 1:
---- input:
[[1,1,1,1],[2,2,2,2],[3,3,3,3],[4,4,4,4]]
---- correct output:
[[4 4 4 4]
[3 3 3 3]
[2 2 2 2]
[1 1 1 1]]
---- user output:
[[4 4 4 4]
 [3 3 3 3]
 [2 2 2 2]
 [1 1 1 1]]
-- TEST CASE 2:
---- input:
[[4,1,1,3],[3,2,2,3],[2,3,3,3],[1,4,4,3]]
---- correct output:
[[4 4 4 3]
[3 3 3 3]
[2 2 2 3]
[1 1 1 3]]
---- user output:
[[4 4 4 3]
 [3 3 3 3]
 [2 2 2 3]
 [1 1 1 3]]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
